<resources>
    <string name="app_name">Chitchatopia</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_image">login_image</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?,</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?,</string>
    <string name="full_name">Full Name</string>
    <string name="terms_amp"><![CDATA[Terms &]]></string>
    <string name="conditions_and_policies">Conditions and Policies</string>
    <string name="add_at_least_one_small_letter">*Add at least one small letter</string>
    <string name="choose_your_avatar">Choose your Avatar</string>
    <string name="next">next</string>
    <string name="search">search</string>
    <string name="search_messages">Search messages</string>
    <string name="edit">edit</string>
    <string name="message">message</string>
    <string name="arrow_back">arrow_back</string>
    <string name="profile_image">profile image</string>
    <string name="online">online</string>
    <string name="video_call">video call</string>
    <string name="call">call</string>
    <string name="type_here">Type here......</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="cancel">Cancel</string>
    <string name="send_image">send image</string>
    <string name="send">send</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation\n</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="back_button">back_button</string>
    <string name="exit">exit</string>
    <string name="app_image">app_image</string>
</resources>