<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isLastItem"
            type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                >
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/user_image_recent_Container"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/avatar1"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/search"
                    app:riv_oval="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/user_name_recent_Container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:layout_marginStart="7dp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:layout_gravity="start"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/last_message_recent_Container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        android:layout_marginStart="7dp"
                        android:textStyle="normal"
                        android:maxLines="1"
                        android:layout_gravity="start"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_13ssp"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>